--- a/MyAcc.css
+++ b/MyAcc.css
@@ -9,15 +9,17 @@ body {
 
 
 .lunananbox{
-       border:  3px solid white;
-         padding: 20px;
-              height:  690px;
+       
+              height:  100%;
+              margin-left: 5%;
+              margin-right: 5%;
+
 }
 
 .profbox{
         background-color: #d9a5b3;
-        width: 400px;
-        height: 680px;
+        width: 30%;
+        height: 100%;
         border-radius: 3.5em;
         box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
         float: left;
@@ -34,8 +36,8 @@ body {
        margin-left: 10px;
        padding-left: 40px;
         background-color: #d9a5b3;
-        width: 470px;
-        height: 680px;
+          width: 30%;
+        height: 100%;
         border-radius: 3.5em;
         box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
        float: left;
@@ -45,8 +47,8 @@ body {
        margin-left: 10px;
         padding-left: 40px;
         background-color: #d9a5b3;
-        width: 470px;
-        height: 680px;
+        width: 30%;
+       height: 100%;
         border-radius: 3.5em;
         box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
        float: left;
@@ -64,3 +66,17 @@ body {
         box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14); 
        height:       35px;
     }   
+
+.seperator{
+       border: 2px solid wheat;
+        width: 90%;
+        height: 50px;
+        background-color: wheat;
+         border-radius: 0.5em;
+        box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+.outbut{
+       text-decoration: none;
+       font-size: 40px;
+       color: black;
+}
